syntax = "proto3";

package shuffle;

service ShuffleNetwork {
    rpc SendPartition(stream SendPartitionRequest) returns(SendPartitionReply){}
}

message sAddress {
    string ip = 1;
    int32 port = 2;
}
enum sResultType {
    FAILURE = 0;
    PENDING = 1;
    SUCCESS = 2;
  }

/*
  File Transfering messages
*/
message SendPartitionRequest {
    sAddress from = 1; //giver machine address
    bytes item = 2; //item contents
    string filename = 3; //filename
}
message SendPartitionReply {
    sResultType result = 1;
}